--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+  .nav_link {
+    @apply relative text-base font-medium w-fit block after:block after:content-[""] after:absolute after:h-[3px] after:bg-yellow-400 text-white after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition  after:origin-left after:duration-300;
+  };
+  .text-bg {
+    background-image: linear-gradient(to right, #f720d3 0%, #ffffff 100% );
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+  } 
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
   }
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: #f720d3;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #af1996;
+    border-radius: 10px;
+    border: 3px solid #751166;
+  }
 }
